--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -106,10 +106,12 @@ goog.require('cw.string');
 
 <script>
 // Insert an image that takes a while to load, to make sure our
-// WebKit spinner-killer works.  Do this after loading the resources
-// above, to prevent an HTTP pipeline stall (happens in Opera, at least).
-document.write('<img src="/wait_resource/?wait=4&zx=' +
-	Math.random() + '" width=1 height=1>');
+// WebKit spinner-killer works.  Load the image from another subdomain to
+// prevent an HTTP pipeline stall.  Note that this doesn't actually help
+// in any known browser.  Opera for some reason waits for this image
+// to load, but not because of pipelining.
+document.write('<img src="//wait-' + __XDRSetup.sub1 + __XDRSetup.suffix +
+	'wait_resource/?wait=4&zx=' + Math.random() + '" width=16 height=16 border=2>');
 </script>
 
 <script>
