Update all pages that use Closure Library for the new autogenerated all_deps.js (which includes Closure Library's deps)

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -89,8 +89,9 @@ __XDRSetup = {
 <div id="FlashConnectorSwf"></div>
 <div id="log"></div>
 
+<script>CLOSURE_NO_DEPS = true;</script>
 <script src="/JSPATH/closure/goog/base.js"></script>
-<script src="/JSPATH/nongoog_deps.js"></script>
+<script src="/JSPATH/all_deps.js"></script>
 <script>
 goog.provide('chatapp');
 
