Add an XDRFrame that loads compiled JavaScript instead of uncompiled JavaScript.  Rename the old XDRFrame to XDRFrameDev.
Also refactor cw.net.XHRLike to its own file, to avoid including
the loggers in xhdr.js in the compiled JavaScript.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -77,6 +77,7 @@ If no such cookie, write out the iframes immediately.
 // when calling through window.
 CSRF_TOKEN = {{ dumps(token) }};
 __XDRSetup = {
+	dev: true,
 	domain: {{ dumps(domain) }},
 	sub1: {{ dumps(sub1) }},
 	sub2: {{ dumps(sub2) }}
