--- a/minerva/xdrframe_dev.html
+++ b/minerva/xdrframe_dev.html
@@ -19,6 +19,7 @@
 	// Load JavaScript from the parent's domain instead of our own subdomain,
 	// subdomain is always random and the resources would not be usefully
 	// cached.
+	// TODO: server-side "jsdomain" option, instead of grabbing the parent's URL.
 	document.write('<script>CLOSURE_NO_DEPS = true;<\/s' + 'cript>');
 	document.write('<script src="' + parentUrl + '/JSPATH/closure/goog/base.js"><\/s' + 'cript>');
 </script>
