--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -254,7 +254,7 @@ chatapp.startStream = function() {
 		cw.net.HttpStreamingMode.NO_STREAMING);
 	chatapp.lastProto = new chatapp.ChatProtocol();
 	chatapp.activityDetected();
-	var endpointD = cw.net.demo.getEndpoint(chatapp.callQueue);
+	var endpointD = cw.net.demo.getEndpointByQueryArgs(chatapp.callQueue);
 	endpointD.addCallback(function(endpoint) {
 		var stream = new cw.net.Stream(
 			chatapp.callQueue, chatapp.lastProto, endpoint, streamPolicy);
