minerva/flashtest/flashtest.html: fix this for some Minerva protocol changes made months ago

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -157,9 +157,10 @@ function makeHelloData(uaId, transportNumber) {
 	}
 	helloData[HP.streamingResponse] = Number(mode == 'flash');
 	helloData[HP.maxReceiveBytes] = 9999999;
-	helloData[HP.maxOpenTime] = 3600 * 1000;
+	helloData[HP.maxOpenTime] = 3600;
 	helloData[HP.succeedsTransport] = null;
 	helloData[HP.httpFormat] = 2; /* XHR */
+	helloData[HP.maxInactivity] = 10;
 	helloData[HP.sack] = '|' + String(ackNum);
 	helloData[HP.lastSackSeenByClient] = lastSackSeenByClient;
 	return helloData;
