Unbreak minerva/chatapp/chatapp.html (use htmldumps instead of dumps); flashtest.html: use htmldumps instead of dumps

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -11,7 +11,7 @@
 		}
 	</style>
 	<script>
-		window.CSRF_TOKEN = {{ dumps(token) }};
+		window.CSRF_TOKEN = {{ htmldumps(token) }};
 	</script>
 </head>
 <body>
