--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -76,7 +76,7 @@ If no such cookie, write out the iframes immediately.
 <script>
 // Don't define variables on "window" to avoid possible IE stack limit of 12
 // when calling through window.
-CSRF_TOKEN = {{ dumps(bootstrap.csrf_token) }};
+CSRF_TOKEN = {{ htmldumps(bootstrap.csrf_token) }};
 {{ bootstrap.getXDRSetup(dev_mode, domain) }}
 </script>
 
