Untangle JSPATH system from all of Minerva

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -83,9 +83,9 @@ CSRF_TOKEN = {{ htmldumps(bootstrap.csrf_token) }};
 <div id="FlashConnectorSwf"></div>
 <div id="log"></div>
 
-<script>CLOSURE_NO_DEPS = true;</script>
-<script src="/JSPATH/closure/goog/base.js"></script>
-<script src="/JSPATH/all_deps.js"></script>
+<script src="/closure-library/closure/goog/base.js"></script>
+<script src="/js_coreweb/deps.js"></script>
+<script src="/js_minerva/deps.js"></script>
 <script>
 goog.provide('chatapp');
 
