--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -43,9 +43,9 @@ Make sure you see the restricted string alphabet below, as well as "#1 #1 #1 ...
 <div id="log"></div>
 
 <div id="appswf"></div>
-<script>CLOSURE_NO_DEPS = true;</script>
-<script src="/JSPATH/closure/goog/base.js"></script>
-<script src="/JSPATH/all_deps.js"></script>
+<script src="/closure-library/closure/goog/base.js"></script>
+<script src="/js_coreweb/deps.js"></script>
+<script src="/js_minerva/deps.js"></script>
 <script>
 goog.require('cw.autoTitle');
 goog.require('goog.debug.DivConsole');
