index.html: fix link name

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <ul>
-<li><a href="/js_minerva_tests.html">/js_minerva_tests.html</a>
+<li><a href="/js_minerva_tests.html">js_minerva tests</a>
 <li><a href="/docs/">/docs/</a>
 <li><a href="/@testres_Coreweb/">/@testres_Coreweb/</a>
 <li><a href="/@testres_Minerva/">/@testres_Minerva/</a>
