--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -3,9 +3,8 @@
 <head>
 	<meta http-equiv="charset" content="text/html; charset=utf-8">
 	<title></title>
+	<link rel="stylesheet" href="/@testres_Coreweb/test_page.css" type="text/css">
 	<style>
-		{{ getTestPageCSS() }}
-
 		#controls tr td {
 			padding: 0.5em 0 0.5em 0;
 		}
@@ -250,7 +249,7 @@ chatapp.clickListen = goog.events.listen(
 
 chatapp.startStream = function() {
 	var streamPolicy = new cw.net.demo.DemoStreamPolicy(
-		'minervasite_uaid', 'minervasite_uaid_secure');
+		'minerva_site_uaid', 'minerva_site_uaid_secure');
 	chatapp.lastProto = new chatapp.ChatProtocol();
 	chatapp.activityDetected();
 	var endpointD = cw.net.demo.getEndpointByQueryArgs(chatapp.callQueue);
