JS Minerva: replace `stringsReceived` API with `stringReceived` (singular).

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -178,11 +178,8 @@ chatapp.ChatProtocol.prototype.handleString_ = function(s) {
 	chatapp.logger.info(cw.string.format('<{0}> {1}', uaId, text));
 };
 
-chatapp.ChatProtocol.prototype.stringsReceived = function(strings) {
-	for(var i=0; i < strings.length; i++) {
-		var s = strings[i];
-		this.handleString_(s);
-	}
+chatapp.ChatProtocol.prototype.stringReceived = function(s) {
+	this.handleString_(s);
 };
 
 /**
