--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -153,7 +153,7 @@ function makeHelloData(transportNumber) {
 	helloData[HP.maxOpenTime] = 3600;
 	helloData[HP.succeedsTransport] = null;
 	helloData[HP.httpFormat] = 2; /* XHR */
-	helloData[HP.maxInactivity] = 10;
+	helloData[HP.maxInactivity] = mode == 'flash' ? 10 : 0;
 	helloData[HP.sack] = '|' + String(ackNum);
 	helloData[HP.lastSackSeenByClient] = lastSackSeenByClient;
 	return helloData;
