Document flashtest.html somewhat

--- a/minerva/flashtest/flashtest.html
+++ b/minerva/flashtest/flashtest.html
@@ -16,6 +16,9 @@
 <body>
 
 <div id="doc">
+This page tests Minerva server's HTTP and socket interfaces, without using the Minerva client.  This test page was created before the client.
+
+<code>?mode=http</code> in the URL will make this test the HTTP interface instead of the socket interface.
 </div>
 
 <table id="controls">
