Document chatapp.html; rm obsolete regen.sh

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -14,6 +14,13 @@
 
 <div id="info">
 <p>
+This test page implements a rudimentary chat, but it is mostly useful for inspecting the
+Minerva protocol traffic.  Type text in the "Send text" box below and click "Send".  Observe
+the traffic when this happens, or observe the traffic caused by another user sending a
+message.
+</p>
+
+<p>
 This page supports options ?mode=http, ?mode=flash, ?useSub=0, ?useSub=1, ?httpStreaming=1
 (which can be combined).  Note: when using subdomains, you'll see fewer log
 messages because log messages in the iframes are not sent to this parent window.
