--- a/minerva/xdrframe.html
+++ b/minerva/xdrframe.html
@@ -50,7 +50,7 @@
 {% endif %}
 
 <script>
-	__xdrframe_setupXDRFrame({{ frameNum }}, {{ htmldumps(frameIdStr) }});
+	__xdrframe_setupXDRFrame({{ htmldumps(frameIdStr) }});
 </script>
 </body>
 </html>
