--- a/minerva/js_minerva_tests.html
+++ b/minerva/js_minerva_tests.html
@@ -22,6 +22,7 @@ div, p, body {
 <script>
 TestRunnerPage.modules = [
 	 "cw.net.TestDecoders"
+	,"cw.net.TestXDRTracker"
 	,"cw.net.TestWindow"
 	,"cw.net.TestFrames"
 	,"cw.net.TestClient"
