In XDRTracker, don't set document.domain, because IE has problems with document.domain being modified after JavaScript objects are already created. Require the user to set document.domain themselves.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -14,6 +14,11 @@
 <script>
 // In minerva_site, user specifies this with the command-line --domain option
 __demo_shared_domain = {{ htmldumps(domain) }};
+// document.domain must be set before JavaScript objects are created, or
+// else IE will become confused and spew "Access is denied" errors.
+if(__demo_shared_domain) {
+	document.domain = __demo_shared_domain;
+}
 </script>
 
 <div id="info">
