--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -19,6 +19,8 @@ __demo_shared_domain = {{ htmldumps(domain) }};
 if(__demo_shared_domain) {
 	document.domain = __demo_shared_domain;
 }
+
+var standaloneClient = {{ htmldumps(standaloneClient) }};
 </script>
 
 <div id="info">
@@ -30,15 +32,16 @@ message.
 </p>
 
 <p>
-This page supports options ?mode=http, ?mode=flash, ?useSub=0, ?useSub=1, ?httpStreaming=1
-(which can be combined).  When testing with Opera, open the Error Console,
-because window.onerror does not work in Opera.  Do the same in Chrome,
-because not all errors are caught by window.onerror (such as when calling a
-nonexistent method on an HTMLEmbedElement).
+This page supports options ?mode=http|flash, ?useSub=0|1, ?httpStreaming=0|1,
+?standaloneClient=0|1 (which can be combined).  When testing with Opera, open
+the Error Console, because window.onerror does not work in Opera.  Do the same
+in Chrome, because not all errors are caught by window.onerror (such as when
+calling a nonexistent method on an HTMLEmbedElement).
 </p>
 
 Do all of these when testing:
 <ul>
+<li>Test this page with ?standaloneClient=1.</li>
 <li>Test this page with ?mode=flash.</li>
 <li>Test this page with ?mode=http&useSub=0.</li>
 <li>Test this page with ?mode=http&useSub=1.</li>
@@ -71,7 +74,7 @@ If you want to see what's in the send queue, enter this into your URL bar:
 </td>
 <td>
 	<input type="text" name="textinput" id="textinput">
-	<input type="submit" value="Send" onclick="chatapp.sendText(byId('textinput').value);return false">
+	<input type="submit" value="Send" onclick="chatapp.sendText(document.getElementById('textinput').value);return false">
 </td>
 </tr>
 </table>
@@ -90,6 +93,7 @@ if(__demo_shared_domain) {
 <div id="FlashConnectorSwf"></div>
 <div id="log"></div>
 
+{% if not standaloneClient %}
 <script src="/closure-library/closure/goog/base.js"></script>
 <script src="/js_coreweb/deps.js"></script>
 <script src="/js_minerva/deps.js"></script>
@@ -112,39 +116,88 @@ goog.require('cw.net.demo.getEndpointByQueryArgs');
 goog.require('cw.repr');
 goog.require('cw.string');
 </script>
+{% else %}
+<script src="/compiled_client/minerva-client.js"></script>
+{% endif %}
 
 <script>
-goog.debug.LogManager.getRoot().setLevel(goog.debug.Logger.Level.ALL);
+if(standaloneClient) {
+	var chatapp = window.chatapp || {};
+
+	var LogManager = Minerva.LogManager;
+	var Logger = Minerva.Logger;
+	var DivConsole = Minerva.DivConsole;
+	var repr = Minerva.repr;
+	var bind = Minerva.bind;
+	var getEndpointByQueryArgs = Minerva.getEndpointByQueryArgs;
+	var theCallQueue = Minerva.theCallQueue;
+	var streamPolicy = undefined;
+	var ClientStream = Minerva.ClientStream;
+
+	// Copied from cw.string.format
+	var format = function() {
+		var values = Array.prototype.slice.call(arguments);
+		var string = values.shift();
+		return string.replace(/\{(\d+)\}/g, function(_ignored, which) {
+			return values[which];
+		});
+	};
+
+	// Copied from cw.string.split
+	var split = function(s, sep, maxsplit) {
+		if(maxsplit === undefined || maxsplit < 0) {
+			return s.split(sep);
+		}
+		var pieces = s.split(sep);
+		var head = pieces.splice(0, maxsplit);
+		// after the splice, pieces is shorter and no longer has the C{head} elements.
+		if(pieces.length > 0) {
+			var tail = pieces.join(sep);
+			head.push(tail); // no longer just the head.
+		}
+		return head;
+	};
+
+} else {
+	var LogManager = goog.debug.LogManager;
+	var Logger = goog.debug.Logger;
+	var DivConsole = goog.debug.DivConsole;
+	var repr = cw.repr.repr;
+	var bind = goog.bind;
+	var getEndpointByQueryArgs = cw.net.demo.getEndpointByQueryArgs;
+	var theCallQueue = cw.eventual.theCallQueue;
+	var streamPolicy = new cw.net.demo.DemoStreamPolicy();
+	var ClientStream = cw.net.ClientStream;
+
+	var format = cw.string.format;
+	var split = cw.string.split;
+}
+
+LogManager.getRoot().setLevel(Logger.Level.ALL);
 
 // Reduce noise from Closure Library's XHR code
-goog.debug.Logger.getLogger('goog.net.xhrMonitor').setLevel(goog.debug.Logger.Level.CONFIG);
-goog.debug.Logger.getLogger('goog.net.XhrIo').setLevel(goog.debug.Logger.Level.CONFIG);
+Logger.getLogger('goog.net.xhrMonitor').setLevel(Logger.Level.CONFIG);
+Logger.getLogger('goog.net.XhrIo').setLevel(Logger.Level.CONFIG);
 
 var logDiv = document.getElementById('log');
-var divConsole = new goog.debug.DivConsole(logDiv);
+var divConsole = new DivConsole(logDiv);
 divConsole.setCapturing(true);
 
-chatapp.logger = goog.debug.Logger.getLogger('chatapp.logger');
+chatapp.logger = Logger.getLogger('chatapp.logger');
 chatapp.logger.info('Logger works.');
 
 
 window.onerror = function(msg, url, lineNumber) {
-	chatapp.logger.severe('window.onerror: message: ' + cw.repr.repr(msg) +
+	chatapp.logger.severe('window.onerror: message: ' + repr(msg) +
 		'\nURL: ' + url + '\nLine Number: ' + lineNumber)
 };
 
-
-function byId(o) {
-	return document.getElementById(o);
-}
 
 /**
  * @implements {cw.net.IMinervaProtocol}
  * @constructor
  */
-chatapp.ChatProtocol = function() {
-
-};
+chatapp.ChatProtocol = function() {};
 
 chatapp.ChatProtocol.prototype.setStream = function(stream) {
 	this.stream_ = stream;
@@ -156,17 +209,17 @@ chatapp.ChatProtocol.prototype.sendInitialStrings = function() {
 
 chatapp.ChatProtocol.prototype.streamReset = function(reasonString, applicationLevel) {
 	chatapp.logger.info(
-		'streamReset: reasonString=' + cw.repr.repr(reasonString) +
+		'streamReset: reasonString=' + repr(reasonString) +
 		', applicationLevel=' + applicationLevel);
 	chatapp.lastProto = null;
 };
 
 chatapp.ChatProtocol.prototype.stringReceived = function(s) {
 	function fail() {
-		chatapp.logger.severe('Could not handle string: ' + cw.repr.repr(s));
+		chatapp.logger.severe('Could not handle string: ' + repr(s));
 	}
 
-	var splitted = cw.string.split(s, '|', 2);
+	var splitted = split(s, '|', 2);
 	if(splitted.length != 3) {
 		return fail();
 	}
@@ -178,7 +231,7 @@ chatapp.ChatProtocol.prototype.stringReceived = function(s) {
 	}
 
 	// TODO: add timestamp
-	chatapp.logger.info(cw.string.format('<{0}> {1}', uaId, text));
+	chatapp.logger.info(format('<{0}> {1}', uaId, text));
 };
 
 /**
@@ -200,10 +253,6 @@ chatapp.ChatProtocol.prototype.sendText = function(text) {
  */
 chatapp.lastProto = null;
 
-
-chatapp.callQueue = new cw.eventual.CallQueue(goog.global['window']);
-
-
 chatapp.idleFired = function() {
 	if(!chatapp.lastProto) {
 		return;
@@ -218,41 +267,42 @@ chatapp.idleTimeout = null;
 
 chatapp.activityDetected = function(ev) {
 	if(chatapp.idleTimeout != null) {
-		chatapp.callQueue.clock.clearTimeout(chatapp.idleTimeout);
+		clearTimeout(chatapp.idleTimeout);
 	}
 
 	// Only need a timeout if we have an active Stream
 	if(chatapp.lastProto) {
-		chatapp.idleTimeout = chatapp.callQueue.clock.setTimeout(
-			chatapp.idleFired, 600 * 1000);
+		chatapp.idleTimeout = setTimeout(chatapp.idleFired, 600 * 1000);
 	}
 };
 
 
-/**
- * @type {!Array.<!goog.events.EventType>}
- */
-chatapp.activityEvents = [
-	goog.events.EventType.CLICK,
-	goog.events.EventType.FOCUS,
-	goog.events.EventType.KEYDOWN,
-	goog.events.EventType.KEYPRESS];
-chatapp.clickListen = goog.events.listen(
-	goog.global, chatapp.activityEvents, chatapp.activityDetected, true);
+if(!standaloneClient) {
+	/**
+	 * @type {!Array.<!goog.events.EventType>}
+	 */
+	chatapp.activityEvents = [
+		goog.events.EventType.CLICK,
+		goog.events.EventType.FOCUS,
+		goog.events.EventType.KEYDOWN,
+		goog.events.EventType.KEYPRESS];
+	chatapp.clickListen = goog.events.listen(
+		goog.global, chatapp.activityEvents, chatapp.activityDetected, true);
+};
+// TODO: for standaloneClient, listen without using Closure?
 
 
 chatapp.startStream = function() {
-	var streamPolicy = new cw.net.demo.DemoStreamPolicy();
 	chatapp.lastProto = new chatapp.ChatProtocol();
 	chatapp.activityDetected();
 
 	// TODO: remove use of Deferred; getEndpointByQueryArgs should be
 	// synchronous after we make a "nice Flash endpoint"
-	var endpointD = cw.net.demo.getEndpointByQueryArgs(chatapp.callQueue);
+	var endpointD = getEndpointByQueryArgs(theCallQueue);
 	endpointD.addCallback(function(endpoint) {
-		var stream = new cw.net.ClientStream(
-			endpoint, streamPolicy, chatapp.callQueue);
-		stream.bindToProtocol(chatapp.lastProto);
+		var stream = new ClientStream(endpoint, streamPolicy);
+		stream.onstring = bind(chatapp.lastProto.stringReceived, chatapp.lastProto);
+		stream.onreset = bind(chatapp.lastProto.streamReset, chatapp.lastProto);
 		chatapp.lastProto.setStream(stream);
 		chatapp.lastProto.sendInitialStrings();
 		stream.start();
