Rename <div id="minerva-xdrframes"> to <div id="minerva-elements"> because this is part of the public API and we're going to chuck other things in there in the future.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -89,7 +89,7 @@ if(__demo_shared_domain) {
 }
 </script>
 
-<div id="minerva-xdrframes"></div>
+<div id="minerva-elements"></div>
 <div id="FlashConnectorSwf"></div>
 <div id="log"></div>
 
