Make Minerva's XDRFrames invisible by default, so users don't have to write an extra style.

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -8,6 +8,14 @@
 		#controls tr td {
 			padding: 0.5em 0 0.5em 0;
 		}
+
+		/* Make the iframes visible for debugging */
+		#minerva-elements iframe {
+			width: 16px !important;
+			height: 16px !important;
+			visibility: visible !important;
+			position: static !important;
+		}
 	</style>
 </head>
 <body>
