For XDRFrame, don't use CSS position: or top: because it can mess up page layout (it messed up DemosMinerva/ljstream).

--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -13,8 +13,8 @@
 		#minerva-elements iframe {
 			width: 16px !important;
 			height: 16px !important;
+			border: 1px !important;
 			visibility: visible !important;
-			position: static !important;
 		}
 	</style>
 </head>
