--- a/minerva/chatapp/chatapp.html
+++ b/minerva/chatapp/chatapp.html
@@ -13,7 +13,7 @@
 		#minerva-elements iframe {
 			width: 16px !important;
 			height: 16px !important;
-			border: 1px !important;
+			border: 2px solid #777 !important;
 			visibility: visible !important;
 		}
 	</style>
