* Remove all obsolete csrfStopper/cookieInstaller usage.
* Add GetEndpointInfo/ which some minerva_site pages will soon use to
  determine which socket port to connect to (instead of just assuming
  it's 843).

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -15,6 +15,7 @@
 	<li><a href="/@testres_Minerva/SimpleResponse/">SimpleResponse/</a>
 	<li><a href="/@testres_Minerva/UnicodeRainbow/">UnicodeRainbow/</a>
 	<li><a href="/@testres_Minerva/NoOriginHeader/">NoOriginHeader/</a>
+	<li><a href="/@testres_Minerva/GetEndpointInfo/">GetEndpointInfo/</a>
 	</ul>
 <li><a href="/form_sandbox/">/form_sandbox/</a>
 <li><a href="/chatapp/">/chatapp/</a>
