Make UnicodeRainbow/ link slightly less useless

--- a/minerva/index.html
+++ b/minerva/index.html
@@ -13,7 +13,7 @@
 	<ul>
 	<li><a href="/@testres_Minerva/DisplayConnections/">DisplayConnections/</a>
 	<li><a href="/@testres_Minerva/SimpleResponse/">SimpleResponse/</a>
-	<li><a href="/@testres_Minerva/UnicodeRainbow/">UnicodeRainbow/</a>
+	<li><a href="/@testres_Minerva/UnicodeRainbow/?ranges=0-65535">UnicodeRainbow/?ranges=0-65535</a>
 	<li><a href="/@testres_Minerva/NoOriginHeader/">NoOriginHeader/</a>
 	<li><a href="/@testres_Minerva/GetEndpointInfo/">GetEndpointInfo/</a>
 	</ul>
